// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pitchRange renders 0 1`] = `
Array [
  .c0 {
  pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders function 1`] = `
Array [
  .c0 {
  pitch-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: has;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders invalid theme path 1`] = `
Array [
  .c0 {
  pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders negative number 1`] = `
Array [
  .c0 {
  pitch-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  pitch-range: July;
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: July;
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    pitch-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    pitch-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch-range: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  pitch-range: July;
}

@media May {
  .c0 {
    pitch-range: August;
  }
}

@media April {
  .c0 {
    pitch-range: September;
  }
}

@media January {
  .c0 {
    pitch-range: November;
  }
}

@media April {
  .c0 {
    pitch-range: August;
  }
}

@media June {
  .c0 {
    pitch-range: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: July;
}

@media May {
  .c0 {
    pitch-range: August;
  }
}

@media April {
  .c0 {
    pitch-range: September;
  }
}

@media January {
  .c0 {
    pitch-range: November;
  }
}

@media April {
  .c0 {
    pitch-range: August;
  }
}

@media June {
  .c0 {
    pitch-range: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch-range: November;
  }
}

@media April {
  .c0 {
    pitch-range: January;
  }
}

@media January {
  .c0 {
    pitch-range: December;
  }
}

@media April {
  .c0 {
    pitch-range: April;
  }
}

@media June {
  .c0 {
    pitch-range: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch-range: November;
  }
}

@media April {
  .c0 {
    pitch-range: January;
  }
}

@media January {
  .c0 {
    pitch-range: December;
  }
}

@media April {
  .c0 {
    pitch-range: April;
  }
}

@media June {
  .c0 {
    pitch-range: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    pitch-range: July;
  }
}

@media April {
  .c0 {
    pitch-range: August;
  }
}

@media January {
  .c0 {
    pitch-range: September;
  }
}

@media April {
  .c0 {
    pitch-range: November;
  }
}

@media June {
  .c0 {
    pitch-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    pitch-range: July;
  }
}

@media April {
  .c0 {
    pitch-range: August;
  }
}

@media January {
  .c0 {
    pitch-range: September;
  }
}

@media April {
  .c0 {
    pitch-range: November;
  }
}

@media June {
  .c0 {
    pitch-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch-range: January;
  }
}

@media April {
  .c0 {
    pitch-range: December;
  }
}

@media January {
  .c0 {
    pitch-range: April;
  }
}

@media April {
  .c0 {
    pitch-range: May;
  }
}

@media June {
  .c0 {
    pitch-range: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch-range: January;
  }
}

@media April {
  .c0 {
    pitch-range: December;
  }
}

@media January {
  .c0 {
    pitch-range: April;
  }
}

@media April {
  .c0 {
    pitch-range: May;
  }
}

@media June {
  .c0 {
    pitch-range: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders postitive number 1`] = `
Array [
  .c0 {
  pitch-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders string 1`] = `
Array [
  .c0 {
  pitch-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: June;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pitchRange renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`pitchRange renders valid theme path 1`] = `
Array [
  .c0 {
  pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
